--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
@@ -21,6 +23,7 @@
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
