Refactor code structure for improved readability and maintainability

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "vitest",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "clean": "rm -rf dist node_modules/.vite"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
