--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -57,3 +57,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# HTTP Client private environment variables
+http-client.private.env.json
