--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "clean": "pnpm -r clean && rm -rf node_modules"
   },
   "devDependencies": {
-    "prettier": "^3.4.2"
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^17.0.0",
+    "prettier": "^3.4.2",
+    "typescript-eslint": "^8.51.0"
   }
 }
