--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ dist
 dist-ssr
 *.local
 
+# Environment variables - Local overrides
+# Commitear: .env, .env.development, .env.production, .env.test
+# NO commitear: .env.local, .env.*.local
+.env.local
+.env.*.local
+.env.development.local
+.env.production.local
+.env.test.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
