fix: update production API URL in .env.production file

--- a/apps/frontend/.env.production
+++ b/apps/frontend/.env.production
@@ -3,9 +3,8 @@
 # ========================================
 # Variables para producción (GitHub Pages)
 
-# Backend producción (actualizar con tu URL real)
-# TODO: Reemplazar con la URL de tu backend en producción (Railway/Render)
-VITE_API_URL=https://api.tu-dominio.com/api
+# Backend producción
+VITE_API_URL=https://friends-web-n2gt.onrender.com/api
 
 # DevTools deshabilitadas en producción
 VITE_ENABLE_DEVTOOLS=false
