feat(auth): add Google OAuth2 authentication API contract
- Created API documentation for Google OAuth2 authentication endpoints including:
  - GET /api/auth/google: Initiates OAuth2 flow
  - GET /api/auth/google/callback: Handles callback and issues JWT
  - GET /api/auth/me: Retrieves authenticated user's profile
  - POST /api/auth/logout: Optional logout endpoint
- Defined request/response shapes and error handling for each endpoint.
- Provided frontend guidance for token handling and integration.
- Included security notes and next steps for implementation.

chore(deps): update dependencies for authentication

- Added necessary dependencies for Google OAuth2 and JWT handling:
  - @nestjs/jwt
  - @nestjs/passport
  - passport
  - passport-google-oauth20
  - passport-jwt
- Updated pnpm-lock.yaml to reflect new and updated packages.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,21 +1,35 @@
-# Server
-PORT=3000
-NODE_ENV=development
+########################################
+# Backend environment example (.env.example)
+########################################
 
-# Database
+# Server
+NODE_ENV=development
+PORT=3000
+
+# Database (use DATABASE_* names to match backend config)
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=friends_db
+DATABASE_SSL=false
 
-# TypeORM
+# TypeORM options
 TYPEORM_SYNC=false
 TYPEORM_LOGGING=true
 
 # CORS
 CORS_ORIGIN=http://localhost:5173
 
-# JWT (futuro)
-JWT_SECRET=your-secret-key-change-in-production
-JWT_EXPIRATION=1d
+# JWT
+JWT_SECRET=replace-with-secure-random
+JWT_EXPIRATION=1h
+
+# Google OAuth2
+GOOGLE_CLIENT_ID=replace-with-google-client-id
+GOOGLE_CLIENT_SECRET=replace-with-google-client-secret
+GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
+
+# Notes:
+# - Do NOT commit a real .env file with secrets.
+# - Use your CI/CD provider or hosting panel to store real secrets.
