fix(env): correct FRONTEND_URL in example environment file

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -22,6 +22,7 @@ TYPEORM_LOGGING=true
 CORS_ORIGIN=http://localhost:5173
 
 # JWT
+FRONTEND_URL=http://localhost:5173/friends-web/#
 JWT_SECRET=replace-with-secure-random
 JWT_EXPIRATION=1h
 
@@ -32,4 +33,6 @@ GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
 
 # Notes:
 # - Do NOT commit a real .env file with secrets.
+
 # - Use your CI/CD provider or hosting panel to store real secrets.
+
