--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -22,7 +22,7 @@ TYPEORM_LOGGING=true
 CORS_ORIGIN=http://localhost:5173
 
 # JWT
-FRONTEND_URL=http://localhost:5173/friends-web/#
+
 JWT_SECRET=replace-with-secure-random
 JWT_EXPIRATION=1h
 
@@ -30,6 +30,9 @@ JWT_EXPIRATION=1h
 GOOGLE_CLIENT_ID=replace-with-google-client-id
 GOOGLE_CLIENT_SECRET=replace-with-google-client-secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
+
+# Frontend URL (used for OAuth redirects)
+FRONTEND_URL="http://localhost:5173/friends-web/#"
 
 # Notes:
 # - Do NOT commit a real .env file with secrets.
