--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -30,7 +30,8 @@
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.3",
+    "react-router": "7.12.0",
+    "react-router-dom": "^7.12.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.6"
   },
